new commit cholesterol added

--- a/SnatterN/SnatterN-Info.plist
+++ b/SnatterN/SnatterN-Info.plist
@@ -20,8 +20,28 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb145409432322884</string>
+			</array>
+			<key>URL schemes</key>
+			<array>
+				<string></string>
+				<string>fb145409432322884</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
+	<key>FacebookAppID</key>
+	<string>145409432322884</string>
+	<key>FacebookDisplayName</key>
+	<string>SnatterN</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIMainStoryboardFile</key>
